2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-16  Seung Yi 

 * Modified server.py to send status line, content type, and body message.
 * Added print c.recv(1000) to see what happens. It seems to print out the
   client's information

2014-01-20  Seung Yi

 * Took out c.recv(1000)
 * Edited server.py so matches the instructor's copy.

2014-01-23 Seung Yi

 * Changed handle_connection function to handle POST and GET properly.
 * Modified test_server.py to test updated handle_connection function.

2014-01-30 Seung Yi

 * Splited handle_connection into seperate functions.
 * Added handle_error and handle_submit functions.
 * Added a form page to take your first and last name to submit.
 * Modified test_server.py to test new functions.

2014-02-06 Seung Yi

 * Modified the send-post-request to send multipart/form-data by adding a file parameter.
 * form works with both multipart/form-data and application/x-www-form-urlencoded
 * submission.
 * Tweaked handle_connection so that recv(1000) to be used with an arbitrary size
 * instead of 1000.
 * handle_connection uses HTML and templates instead of directly sending responses.
