@@ -29,7 +29,7 @@ def test_handle_index():
     conn = FakeConnection("GET / HTTP/1.0\r\n\r\n")
     er = 'HTTP/1.0 200 OK\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)
 
@@ -37,7 +37,7 @@ def test_handle_content():
     conn = FakeConnection("GET /content HTTP/1.0\r\n\r\n")
     er = 'HTTP/1.0 200 OK\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)
 
@@ -45,7 +45,7 @@ def test_handle_file():
     conn = FakeConnection("GET /file HTTP/1.0\r\n\r\n")
     er = 'HTTP/1.0 200 OK\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)
 
@@ -53,7 +53,7 @@ def test_handle_image():
     conn = FakeConnection("GET /image HTTP/1.0\r\n\r\n")
     er = 'HTTP/1.0 200 OK\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)
 
@@ -61,7 +61,7 @@ def test_handle_form():
     conn = FakeConnection("GET /form HTTP/1.0\r\n\r\n")
     er = 'HTTP/1.0 200 OK\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)
 
@@ -69,7 +69,7 @@ def test_404():
     conn = FakeConnection("GET /404 HTTP/1.0\r\n\r\n")
     er = 'HTTP/1.0 404 Not Found\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)
 
@@ -80,7 +80,7 @@ def test_handle_submit():
                            HTTP/1.0\r\n\r\n".format(firstname, lastname))
     er = 'HTTP/1.0 200 OK\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)  
 
@@ -93,7 +93,7 @@ def test_submit_post_urlencoded():
                            "firstname={0}&lastname={1}\r\n".format(firstname, lastname))
     er = 'HTTP/1.0 200 OK\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)
 
@@ -120,7 +120,7 @@ def test_submit_post_multipart():
     lastname = 'yi'
     er = 'HTTP/1.0 200 OK\r\n'
 
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     assert conn.sent[:len(er)] == er, 'Got: %s' % (repr(conn.sent),)
 
@@ -129,7 +129,7 @@ def test_submit_post_404():
                           "Content-Length: 0\r\n" + \
                           "Content-Type: application/x-www-form-urlencoded\r\n\r\n"
                          )
-    server.handle_connection(conn)
+    server.handle_connection(conn, 80)
 
     er = 'HTTP/1.0 404 Not Found\r\n'
 
